export interface Favorite {
    userId: number;
    recipeId: number;
    createdAt: string;
}
